--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,7 +10,9 @@ jobs:
       - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: ^3.9
+          cache: 'pip'
+          cache-dependency-path: 'setup.py'
       - name: Install dependencies
         run: |
           pip install --upgrade pip
